--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = dep_any_zed
+name = depanyzed
 version = 0.0.1
 description = depth anything with ZED SDK
 author = katsunori-waragai
