--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ authors = [
     {name = "katsunori-waragai", email="waragai.katsunori@borgroid.co.jp"},
 ]
 
+requires-python = ">= 3.8"
+
 dependencies = [
     "matplotlib",
     "numpy",
@@ -21,6 +23,9 @@ dependencies = [
 
 [project.urls]
 Repositor = "https://github.com/katsunori-waragai/depth-anything-zed"
+
+[tool.setuptools]
+packages = ["depanyzed"]
 
 [tool.black]
 line-length = 120
