--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,13 @@ authors = [
 requires-python = ">= 3.8"
 
 dependencies = [
+    "huggingface_hub",
     "matplotlib",
     "numpy",
     "opencv-python==3.4.18.65",
+    "open3d",
+    "onnxruntime",
+    "onnx",
     "scikit-image",
     "scikit-learn",
 ]
