--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ requires-python = ">= 3.8"
 dependencies = [
     "huggingface_hub",
     "matplotlib",
-    "numpy",
+    "numpy<2",
     "opencv-python==3.4.18.65",
     "open3d",
     "onnxruntime",
