--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
-.ply filter=lfs diff=lfs merge=lfs -text
-.npy filter=lfs diff=lfs merge=lfs -text
+*.ply filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
