--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "open3d",
     "onnxruntime",
     "onnx",
+    "torch",
+    "torchvision",
     "scikit-image",
     "scikit-learn",
 ]
