--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "open3d",
     "onnxruntime",
     "onnx",
+    "pillow",
     "torch",
     "torchvision",
     "scikit-image",
