--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "depanyzed"
 description = "depth anything with ZED SDK"
 readme = "README.md"
-version = "0.0.3"
+version = "0.0.4"
 authors = [
     {name = "katsunori-waragai", email="waragai.katsunori@borgroid.co.jp"},
     {name = "zhang chao", email = "zhang.chao@borgroid.co.jp"},
@@ -22,6 +22,7 @@ dependencies = [
     "open3d",
     "onnxruntime",
     "onnx",
+    "pillow",
     "torch",
     "torchvision",
     "scikit-image",
